[package]
name = "clonymccloneface"
version = "0.2.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
structopt = { version = "0.3.16", features = [ "paw" ] }
paw = "1.0.0"
subprocess = "0.2.4"
spinners = "1.2.0"
yansi = "0.5.0"
openssl = { version = '0.10', features = ["vendored"] }

[dependencies.github-rs]
version = "0.7"
default-features = false
features = ["rust-native-tls"]

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'
