[package]
name = "clonymccloneface"
version = "0.3.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
structopt = { version = "0.3.26", features = ["paw"] }
paw = "1.0.0"
subprocess = "0.2.9"
spinners = "4.1.0"
yansi = "0.5.1"
octocrab = { version = "0.31.1", features = ["rustls"] }
anyhow = "1.0.72"
tokio = { version = "1.30.0", features = ["full"] }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'
