[package]
name = "clonymccloneface"
version = "0.4.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
structopt = { version = "0.3.26", features = ["paw"] }
paw = "1.0.0"
subprocess = "1.1.0"
spinners = "4.2.0"
yansi = "1.0.1"
octocrab = { version = "0.52.0", features = ["rustls"] }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 'z'
